[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.24"
glob = "0.3.1"
lazy_static = "1.4.0"
leptos = { version = "0.5.7", features = ["ssr", "experimental-islands"] }
regex = "1.8.1"
rss = "2.0.3"
