[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.35"
glob = "0.3.1"
lazy_static = "1.4.0"
leptos = { version = "0.6.9", features = ["ssr", "experimental-islands"] }
regex = "1.10.3"
rss = "2.0.7"
